# MachinaOculiVulkanicae

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg_rf.txt
apps/: CMakeLists.txt  core.main.cpp  desktop.main.cpp
apps/core/: Controller.cpp  Controller.hpp
data/: CMakeLists.txt  vertex.vert
include/: .gitignore  CMakeLists.txt
include/mov/: Application.hpp  CMakeLists.txt  CommonStructs.hpp  GameObject.hpp  Mesh.hpp  Model.hpp  PushConstants.hpp  Transform.hpp  Vertex.hpp  VkBuffer.hpp  VkImage.hpp  VkUtils.hpp
include/mov/backend/: VulkanInstance.hpp
include/mov/surface/: SDLSurface.hpp
lib/: CMakeLists.txt
lib/mov/: Application.cpp  CMakeLists.txt  GameObject.cpp  VkBuffer.cpp  VkImage.cpp  VkUtils.cpp
lib/mov/backend/: VulkanDebugger.hpp  VulkanInstance.cpp
lib/mov/surface/: SDLSurface.cpp
